syntax = "proto3";

package com.ncirl.smartwarehouse;

option java_multiple_files = true;
option java_package = "com.ncirl.smartwarehouse";
option java_outer_classname = "MotionSensorServiceProto";

service MotionSensorService {
  // Server-side streaming RPC to receive motion detection updates
  rpc detectMotion(stream DetectMotionStatusRequest) returns (DetectMotionResponse);
}

// Request message to send motion detection status
message DetectMotionStatusRequest {
  bool isMotionDetected = 1;
}

// Response message for motion detection
message DetectMotionResponse {
  string message = 1;
}

